--- a/share/qt/Info.plist
+++ b/share/qt/Info.plist
@@ -3,7 +3,7 @@
 <plist version="0.9">
 <dict>
 	<key>CFBundleIconFile</key>
-	<string>litecoin.icns</string>
+	<string>virtualcoin.icns</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleGetInfoString</key>
@@ -15,19 +15,19 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleExecutable</key>
-	<string>Litecoin-Qt</string>
+	<string>Virtualcoin-Qt</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.litecoin.Litecoin-Qt</string>
+	<string>org.virtualcoin.Virtualcoin-Qt</string>
         <key>CFBundleURLTypes</key>
         <array>
           <dict>
             <key>CFBundleTypeRole</key>
             <string>Editor</string>
             <key>CFBundleURLName</key>
-            <string>org.litecoin.LitecoinPayment</string>
+            <string>org.virtualcoin.VirtualcoinPayment</string>
             <key>CFBundleURLSchemes</key>
             <array>
-              <string>litecoin</string>
+              <string>virtualcoin</string>
             </array>
           </dict>
         </array>
